# sahiy-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_faq_i18n_columns.py
app/: __init__.py  main.py
app/api/: exception_handlers.py
app/bootstrap/: embedder.py
app/channels/: __init__.py  ports.py
deploy/: Dockerfile
docs/: GO_INTEGRATION.md
scripts/: debug_sahiy_lookup.py  dev_up.sh  export_faq_to_excel.py  migrate_faq_seed_i18n.py  reindex_faq.py  run_telegram_bot.py  seed_faq.py  seed_faq_sahiy.py
tests/: conftest.py  test_admin_captcha.py  test_ai_factory.py  test_api_errors.py  test_categories_1688_cache.py  test_category_intent.py  test_category_present.py  test_category_resolution.py  test_chat_service.py  test_classification.py  test_conversation_router.py  test_conversation_router_llm.py  test_conversation_thread.py  test_custom_daigou.py  test_customer_identity.py  test_daigou_admin.py  test_daigou_status.py  test_exchange_rates.py  test_faq_locale.py  test_handoff.py  test_health.py  test_language_menu.py  test_order_chain.py  test_order_eta.py  test_order_list_intent.py  test_order_list_menu.py  test_order_match.py  test_order_present.py  test_order_refs.py  test_pickup_points.py  test_process.py  test_product_search.py  test_product_search_intent.py  test_product_search_keywords.py  test_prompts.py  test_provider_errors.py  test_reply_language.py  test_reply_language_i18n.py  test_repositories.py  test_rules_ai.py  (+8 more)
(+233 files in other folders)
