[project]
name = "sahiy-agent"
version = "0.1.0"
description = "Pluggable Python AI service layer for customer support chat"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pgvector>=0.3.6",
    "python-dotenv>=1.0.1",
    "openai>=1.55.0",
    "anthropic>=0.42.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=21.6",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "python-telegram-bot>=21.6",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
